--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,5 @@ Temp/FSTimeGet-d125a9ca265bf324e83acbe3c8ddd6eb
 Temp/FSTimeGet-ef89b319f0681bd4ea392f822b17aaf3
 Temp/FSTimeGet-f239eee73667dd54f83d984010a8d298
 .vs/ZombieApocalypse/FileContentIndex/42bb67e2-8d31-4774-ac13-3f5c18c9d8bb.vsidx
+.vs/ZombieApocalypse/FileContentIndex/1f1e18d6-50a1-418e-bf6d-703d40303132.vsidx
+.vs/ZombieApocalypse/FileContentIndex/4166ec77-e2e5-4899-bd71-9653f58c610b.vsidx
