--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,6 @@ Temp/FSTimeGet-bd81f5bd61cc3ed458f5cb521106a874
 .vs/ZombieApocalypse/FileContentIndex/0a058601-b0c3-493a-831d-a33e03b983e6.vsidx
 .vs/ZombieApocalypse/FileContentIndex/ee27bcda-f3c7-4c5f-98b2-dcb264fdfe1a.vsidx
 .vs/ZombieApocalypse/FileContentIndex/c0603c35-9157-4139-9ebe-240540602380.vsidx
+Temp/FSTimeGet-61f890ecbae6c6f4b98330274ae801af
+Temp/FSTimeGet-9746d1023432927468b5bdca4b4e9fd7
+.vs/ZombieApocalypse/FileContentIndex/79ae63f0-e6eb-4225-bbed-ad1be1420ce8.vsidx
