--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,8 @@ Temp/FSTimeGet-58fdf88ff89c2ec47a84fd8df1d48f52
 Temp/FSTimeGet-9c62a2fa1181f624ab0b3d87f56d43f9
 .vs/ZombieApocalypse/FileContentIndex/4079876d-00bf-4be2-951c-60d936622839.vsidx
 .vs/ZombieApocalypse/FileContentIndex/d2b84096-19fd-4157-958f-9a6b672e801d.vsidx
+Temp/FSTimeGet-99b6f3b3bf3668644aa91b7d97ef31a2
+Temp/FSTimeGet-a6ceeb2137012e04193fc33d93da033b
+Temp/FSTimeGet-c3c07ccd4963b684eb932c2ad82d0cf2
+.vs/ZombieApocalypse/FileContentIndex/68834b24-2b84-44b5-8400-bd3334255730.vsidx
+.vs/ZombieApocalypse/FileContentIndex/fa3ff1ce-dd6f-49ee-8fb4-ef7de226d227.vsidx
