--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,7 @@ Temp/FSTimeGet-7dba297ae24eeb14ea37cc5a8e749f00
 .vs/ZombieApocalypse/FileContentIndex/6e7f8278-d122-425b-8db4-c7e0e3f724b4.vsidx
 .vs/ZombieApocalypse/FileContentIndex/7acdf85d-2cc8-4c75-beb1-2c58430ce778.vsidx
 .vs/ZombieApocalypse/FileContentIndex/d0e914b7-2624-44d1-b73c-05bfcd03ba7c.vsidx
+Temp/FSTimeGet-73bc096c53611df4e9253dd6d64579ee
+Temp/FSTimeGet-d4c11e7240a9f6445b9fab4c38edc0ae
+Temp/FSTimeGet-d65a9a9dd0d91654a9b252050e62ae84
+.vs/ZombieApocalypse/FileContentIndex/216a2255-52f8-4d11-843f-b16a610f6f8d.vsidx
