--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,7 @@ Temp/FSTimeGet-73bc096c53611df4e9253dd6d64579ee
 Temp/FSTimeGet-d4c11e7240a9f6445b9fab4c38edc0ae
 Temp/FSTimeGet-d65a9a9dd0d91654a9b252050e62ae84
 .vs/ZombieApocalypse/FileContentIndex/216a2255-52f8-4d11-843f-b16a610f6f8d.vsidx
+.vs/ZombieApocalypse/FileContentIndex/b3eac353-5a77-4293-8b43-c68d720d3e7e.vsidx
+Temp/FSTimeGet-0ebc2bee4eac014448cc0a7c442ff684
+Temp/FSTimeGet-585f9008dd40df24692b1bdd059a7a01
+Temp/FSTimeGet-8fdad7ca267002f428031a851f949ae9
