--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,8 @@ Temp/FSTimeGet-d65a9a9dd0d91654a9b252050e62ae84
 Temp/FSTimeGet-0ebc2bee4eac014448cc0a7c442ff684
 Temp/FSTimeGet-585f9008dd40df24692b1bdd059a7a01
 Temp/FSTimeGet-8fdad7ca267002f428031a851f949ae9
+Temp/FSTimeGet-42726ccdb91e3304ba68eeea28076569
+Temp/FSTimeGet-628ba97ec932e834ca067f8205f98a7d
+Temp/FSTimeGet-907a42e7edfe552488b7afc2e433864d
+.vs/ZombieApocalypse/FileContentIndex/d8315ab0-8e33-480e-a689-46e512a5b515.vsidx
+.vs/ZombieApocalypse/FileContentIndex/ddc32526-3f31-4c42-96ea-017fd8187e48.vsidx
