--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,4 @@ Temp/FSTimeGet-c0ad55e48e0e9f84590660fd9dd657ac
 Temp/FSTimeGet-cb1e1a74830f73147b2d3b916d885f20
 .vs/ZombieApocalypse/FileContentIndex/403bb218-490e-4d9d-9204-f98a025d304f.vsidx
 .vs/ZombieApocalypse/FileContentIndex/d816896c-2820-4066-bcaa-36747d9dfd11.vsidx
+.vs/ZombieApocalypse/FileContentIndex/38ddf65b-bef7-408c-9bc5-a1cdf98f2667.vsidx
