--- a/.gitignore
+++ b/.gitignore
@@ -121,3 +121,8 @@ Temp/FSTimeGet-833a790d5c040ad4f9635ee1ebb59984
 Temp/FSTimeGet-85ea25c740e642d47b36b78ccc0af5e1
 .vs/ZombieApocalypse/FileContentIndex/329a9f65-14b2-4956-9aa0-3ce7cec0062d.vsidx
 .vs/ZombieApocalypse/FileContentIndex/bccad73f-53c9-4c79-93b0-a26ad1607dc6.vsidx
+.vs/ZombieApocalypse/FileContentIndex/4fda50c6-c2f5-4582-8891-c3d812915896.vsidx
+.vs/ZombieApocalypse/FileContentIndex/96f030b6-cc04-4942-8ae7-bb7be7698b07.vsidx
+Temp/FSTimeGet-133fb27bbbcb0ab4caebe627282bc7ff
+Temp/FSTimeGet-271bb12a31f904549bcb1c1c70463f20
+Temp/FSTimeGet-a772bb2bccf9d314ba3ba8ed1c25590e
