--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,6 @@ Temp/FSTimeGet-6f2d9d02e3e5c054d9f0a90adabdc734
 Temp/FSTimeGet-25c54729734963c4fb54adcceba48646
 Temp/FSTimeGet-365315a3578f9d545851edea3750dace
 Temp/FSTimeGet-61009ed842263fb4d8a3bc172cb6d5ab
+.vs/ZombieApocalypse/FileContentIndex/ef4552cb-9599-42bf-a844-88431904d66b.vsidx
+.vs/ZombieApocalypse/FileContentIndex/f90c5e0c-b6a5-4f5d-90b0-7406dd7ff6d6.vsidx
+.vs/ZombieApocalypse/FileContentIndex/636c213e-1df6-40d2-b695-749a500b0940.vsidx
